# INTT

./: .gitignore  README.md
Channel_classification/: README.md
Channel_classification/ladder_cali_BNL/: final_results.c  ladder_list.txt  ladder_list.txt~  re_run_cal.sh  re_run_cut.sh
HV_LV/LV/: turn_FPHX_LV.sh  turn_FPHX_LV_multiple_modules.sh  turn_FPHX_LV_single_module.sh  turn_LV.sh  turn_LV_dev.sh  turn_switch_LV.sh  turn_switch_LV_dev.sh
QA_codes/InttQA/: InttCloneRawHitQA.cc  InttCloneRawHitQA.h  InttFineDelayScan.cc  InttFineDelayScan.h  InttFineDelayScanTrkrHit.cc  InttFineDelayScanTrkrHit.h  InttQaCommon.h  InttRawHitQA.cc  InttRawHitQA.h  InttTrkrHitQA.cc  InttTrkrHitQA.h  Makefile.am  Makefile.in  TH2INTT.h  configure  configure.ac
QA_codes/QAEval/: InttQAEval.cc  InttQAEval.h  Makefile.am  configure.ac
QA_codes/QA_database/: GoodRunList.py  make_plots.py  put_in_database.py  put_in_database_old.py  run51730_52206.txt  run52469_53880.txt
RIKEN_APR/: README.md  author_list_generator_JFY2023.py  author_list_generator_JFY2024.py
Testbeam_G4_code/: HOWTORUN.md  README.md  filter_N_v2.c  filter_N_v3.c  interface_v1.c  interface_v3.c  tracking_single.C  tracking_v6.C
Testbeam_G4_code/cwshih@chip01.phy.ncu.edu.tw/: CMakeLists.txt  exampleED.cc
Testbeam_G4_code/session7_solution/: CMakeLists.txt  INTT_config.mac  exampleED.cc  run.mac  vis.mac
Testbeam_G4_code/session7_solution/beam_parameter/: Au_20um.root  Au_20um.tsv  W_200um.root  W_200um.tsv  eval_test.cc  make_data.cc  parameters.numbers
Testbeam_G4_code/session7_solution/include/: CalHit.hh  EDActionInitialization.hh  EDChamberHit.hh  EDChamberSD.hh  EDDetectorConstruction.hh  EDEmCalorimeterHit.hh  EDEmCalorimeterSD.hh  EDEventAction.hh  EDPrimaryGeneratorAction.hh  EDRunAction.hh  ELPHEBeam.hh  INTTMessenger.hh  INTT_misc.hh  OutputManager.hh  SteppingAction.hh  TrackingAction.hh  VHit.hh
Testbeam_G4_code/session7_solution/lib/: CMakeLists.txt  EventDict.cc  EventDict_rdict.pcm  Eventa.cc  Eventa.hh  LinkDef.h  LinkDef_Event.h  LinkDef_StepMC.h  Makefile  StepMC.cc  StepMC.hh  TrackMC.cc  TrackMCDict.cc  ana.cc  dummy.cc
Testbeam_G4_code/session7_solution/src/: ,  DetectorMessenger.cc  EDActionInitialization.cc  EDChamberHit.cc  EDChamberSD.cc  EDDetectorConstruction.cc  EDEmCalorimeterHit.cc  EDEmCalorimeterSD.cc  EDEventAction.cc  EDPrimaryGeneratorAction.cc  EDRunAction.cc  ELPHEBeam.cc  INTTMessenger.cc  OutputManager.cc  SteppingAction.cc  TrackingAction.cc
Testbeam_G4_code/session7_solution/src/hide/: EDPrimaryGeneratorAction_copy.txt
Testbeam_G4_code/session7_solution_v1/: EDmerge.root  exampleED.cc  run.mac  run.mac~  vis.mac  vis.mac~
Testbeam_G4_code/session7_solution_v2/: run.mac  run.mac~
felix/: Doxyfile  intt_ext.py
felix/decoder_hit_base/: Makefile  README.md  myfirstproject.C  myfirstproject.h  myfirstproject.sh  myfirstproject_dict_rdict.pcm
general_codes/: ,  .gitignore  README.md  adc_ampl4.C  adc_hist.C  check_chip_ext_trig.c  check_chip_prototypeMaximam20190204.c  check_chip_prototypeMaximam5_faster.c  check_chip_prototypeMaximam6_with_cut.c  check_chip_prototypeMaximum7.c  check_chip_prototype_twice - コピー.c  check_felix.cc  check_rawchip.C  draw_intt_line.h  fphx_raw2root.C  fphx_raw_20200727-1917_0.root  fphx_raw_20200728-1905_0.root  his_count_ampl.C  histo.root  plot_chip.C  plot_readtree2.C  readtree.c  run_readtree.C
general_codes/20200728_shibata/: readtree2.cc
general_codes/cosmic_macro_20200728_shibata/: event_chan.c  plot_readtree2.C  readtree.c
general_codes/functions/: #DrawPlots.cc#  DrawHitMap.c  DrawPlots.cc  DrawPlots.cc.Genkis  DrawPlots.hh  DrawPlotsMultipleLadders.cc  DrawPlotsMultipleLadders.hh  FindLatestFile.cc  FindLatestFile.hh  INTTHit.cc  INTTHit.hh  INTTHit_test.cc  (+2 more)
general_codes/hachiya/F4AInttRead/src/: GetGeom.cc  GetGeom.h  InttAna.cc  InttAna.h  InttBcoReco.cc  InttBcoReco.h  InttClusAna.cc  InttClusAna.h  InttCombinedRawDataConverterEB.cc  InttCombinedRawDataConverterEB.h  InttCompareRawHit.cc  InttCompareRawHit.h  InttDisp.cc  InttDisp.h  InttDummyData.cc  InttOfflineCluster.cc  InttOfflineCluster.h  InttOfflineClusterLinkDef.h  InttOfflineDummyData.cc  InttOfflineEvent.cc  InttOfflineEvent.h  InttOfflineEventLinkDef.h  InttRawData.cc  InttRawData.h  InttSaveTree.cc  InttSaveTree.h  InttSkipEvent.cc  InttSkipEvent.h  InttStreamAna.cc  InttStreamAna.h  InttStreamReco.cc  InttStreamReco.h  InttStreamRecoF4A.cc  InttStreamRecoF4A.h  Makefile.am  MyTimer.cc  MyTimer.h  configure.ac
general_codes/hachiya/INTTVtx/src/: INTTXYvtx.h  INTTZvtx.h  InttConversion_new.cc  InttConversion_new.h  InttVertex.h  InttVertex3D.h  InttVertex3DLinkDef.h  InttVertex3DMap.cc  InttVertex3DMap.h  InttVertex3DMapLinkDef.h  InttVertex3DMapv1.cc  InttVertex3DMapv1.h  InttVertex3DMapv1LinkDef.h  InttVertex3Dv1.cc  InttVertex3Dv1.h  InttVertex3Dv1LinkDef.h  InttVertexv1.h  InttXYVertexFinder.cc  InttXYVertexFinder.h  InttZVertexFinder.cc  InttZVertexFinder.h  Makefile.am  configure.ac  gaus_func.cc  gaus_func.h  sigmaEff.cc  sigmaEff.h
general_codes/josephb/InttExampleAna/: InttExampleAna.cc  InttExampleAna.h  Makefile.am  README.md  configure.ac
general_codes/josephb/InttJb/src/: InttEvtJb.cc  InttEvtJb.h  InttEvtJbLinkDef.h  InttEvtJbVer1.cc  InttEvtJbVer1.h  InttEvtJbVer1LinkDef.h  InttHitJb.cc  InttHitJb.h  InttHitJbLinkDef.h  InttHitJbVer1.cc  InttHitJbVer1.h  InttHitJbVer1LinkDef.h  InttUnpackerJb.cc  InttUnpackerJb.h  Makefile.am  README.md
general_codes/josephb/InttJb/src/bak/2023_11_14/: InttHitJb.cc  InttHitJb.h  InttHitJbLinkDef.h  InttHitJb_v1.cc  InttHitJb_v1.h  InttHitJb_v1LinkDef.h  InttHitJb_v2.cc  InttHitJb_v2.h  InttHitJb_v2LinkDef.h
general_codes/josephb/InttJb/src/bak/2023_11_15/InttPosJb/: InttPosJb.cc  InttPosJb.h  InttPosJbLinkDef.h  InttPosJbVer1.cc  InttPosJbVer1.h  InttPosJbVer1LinkDef.h
general_codes/josephb/InttJosephB/: InttHitJb.cc  InttHitJb.h  InttHitJbLinkDef.h  InttJosephB.cc  InttJosephB.h  InttProductionJb.cc  InttProductionJb.h  InttUnpackerJb.cc  InttUnpackerJb.h  Makefile.am  README.md  configure.ac
(+1042 files in other folders)
